tests/ui/eii/default/multiple-default-impls-same-name.stderr
error[E0428]: the name `a` is defined multiple times
  --> $DIR/multiple-default-impls-same-name.rs:18:1
   |
LL | fn a() {}
   | ------ previous definition of the value `a` here
...
LL | fn a() {}
   | ^^^^^^ `a` redefined here
   |
   = note: `a` must be defined only once in the value namespace of this module

error[E0428]: the name `eii1` is defined multiple times
  --> $DIR/multiple-default-impls-same-name.rs:16:1
   |
LL | #[eii(eii1)]
   | ------------ previous definition of the macro `eii1` here
...
LL | #[eii(eii1)]
   | ^^^^^^^^^^^^ `eii1` redefined here
   |
   = note: `eii1` must be defined only once in the macro namespace of this module

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0428`.
